--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -1,14 +1,12 @@
-name: Java CI with Gradle
+name: Java CI with Maven
 
 on:
   pull_request:
     branches: "main"
 
-permissions:
-  contents: read
-
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -18,15 +16,6 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Build with Gradle
-        run: ./gradlew build
-
-      - name: Test with Gradle
-        run: ./gradlew test
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
